imvirt (0.9.1) unstable; urgency=low

  * Output possible result lines on help output.
  * Don't die in Utils/pcidevs.pm if lspci is not available.
    (Closes Debian Bug#612735 by Stefan Bühler)
  * Parse new kernel paravirtualization lines (KVM, VMware).
  * Improve KVM w/ virtio detection.
  * Add basic lguest detection support.

 -- Thomas Liske <liske@ibh.de>  

imvirt (0.9.0) unstable; urgency=low

  * Rewrite imvirt as a perl module framework.
  * Detection changed from "first best match" to a weighted
    characteristics aproach.
  * Add legacy replacement script 'imvirt' as a replacement
    for the old monolitic script.

 -- Thomas Liske <liske@ibh.de>  Mon, 29 Mar 2010 19:55:14 +0200

imvirt (0.3.3) unstable; urgency=low

  * Make modern GCC versions stop warning about breaking
    strict-aliasing checking.
  * Add imvirt.spec.in.

 -- Thomas Liske <liske@ibh.de>  Sat, 13 Feb 2010 00:26:54 +0100

imvirt (0.3.2) unstable; urgency=low

  * Handle SIGILL on amd64 for Xen PV detection gracefully.
     reported by Patrick Matthäi <patrick.matthaei@web.de>
  * Fix false positive CPUID results interpreted as HVM
    virtualization on P4.
     (Closes Debian Bug#566656 by Stephan Sürken)
  * Add CPUID debug code (-c).
  * Add missing stdlib.h to detect.c (compile warning).

 -- Thomas Liske <liske@ibh.de>  Mon, 01 Feb 2010 14:56:15 +0100

imvirt (0.3.1) unstable; urgency=low

  * Add missing manpage (svn was somewhat confused).

  * Fix build system.

 -- Thomas Liske <liske@ibh.de>  Sat, 12 Sep 2009 21:09:22 +0200

imvirt (0.3) unstable; urgency=low

  * Add manpage from Debian,
     thanks to Patrick Matthäi <patrick.matthaei@web.de>

  * Add OpenVZ/Virtuozzo detection
     taken from virt-what 1.1 (Evgeniy Sokolov)

  * Add UML detection

  * Add binary helper to detect
      - Virtual PC/Server
      - VMware
      - Xen
     HVM using cpuid calls.

  * Improvements/fixes:
    - fix dmesg call
    - scan /proc/ide/hd*/model for well known signatures
