@@ -6,7 +6,7 @@
 #   Thomas Liske <liske@ibh.de>
 #
 # Copyright Holder:
-#   2009 - 2010 (C) IBH IT-Service GmbH [http://www.ibh.de/]
+#   2009 - 2011 (C) IBH IT-Service GmbH [http://www.ibh.de/]
 #
 # License:
 #   This program is free software; you can redistribute it and/or modify
@@ -35,6 +35,12 @@ use ImVirt::Utils::cpuinfo;
 use ImVirt::Utils::dmesg;
 use ImVirt::Utils::kmods;
 use ImVirt::Utils::pcidevs;
+use ImVirt::Utils::dmidecode;
+use ImVirt::Utils::dmesg;
+use ImVirt::Utils::sysfs;
+use ImVirt::Utils::procfs;
+use ImVirt::Utils::helper;
+use ImVirt::Utils::kmods;
 
 ImVirt::register_vmd(__PACKAGE__);
 
@@ -42,6 +48,49 @@ sub detect($) {
     ImVirt::debug(__PACKAGE__, 'detect()');
 
     my $dref = shift;
+
+    # Check dmidecode
+    if(defined(my $spn = dmidecode_string('system-product-name'))) {
+        if ($spn =~ /^KVM/) {
+            ImVirt::inc_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+        else {
+            ImVirt::dec_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+    }
+    if(defined(my $spn = dmidecode_string('bios-vendor'))) {
+        if ($spn =~ /^QEMU/) {
+            ImVirt::inc_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+        else {
+            ImVirt::dec_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+    }
+
+    # Look for dmesg lines
+    if(defined(my $m = dmesg_match(
+        ' QEMUAPIC ' => IMV_PTS_NORMAL,
+        'QEMU Virtual CPU' => IMV_PTS_NORMAL,
+        'Booting paravirtualized kernel on KVM' => IMV_PTS_MAJOR,
+        'kvm-clock' => IMV_PTS_MAJOR,
+      ))) {
+        if($m > 0) {
+            ImVirt::inc_pts($dref, $m, IMV_VIRTUAL, PRODUCT);
+        }
+        else {
+            ImVirt::dec_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+    }
+
+    # Look for clock source
+    if(defined(my $cs = sysfs_read('devices/system/clocksource/clocksource0/available_clocksource'))) {
+        if($cs =~ /kvm/) {
+            ImVirt::inc_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+        else {
+            ImVirt::dec_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+    }
 
     # Check /proc/cpuinfo
     my %cpuinfo = cpuinfo_get();
@@ -59,6 +108,13 @@ sub detect($) {
 	}
     }
 
+   # Check helper output for hypervisor detection
+    if(my $hvm = helper('hvm')) {
+        if($hvm =~ /KVM/) {
+            ImVirt::inc_pts($dref, IMV_PTS_MAJOR, IMV_VIRTUAL, PRODUCT);
+        }
+    }
+
     # Look for a dmesg paravirtualization line
     if(defined(my $m = dmesg_match(
 	'Booting paravirtualized kernel on KVM' => IMV_PTS_MAJOR,
@@ -68,7 +124,7 @@ sub detect($) {
 
     # Look for virtio modules
     my $p = kmods_match(
-	'^virtio_(blk|pci|net|ballon)$' => IMV_PTS_MINOR,
+	'^virtio(_(blk|pci|net|ballon|ring))?$' => IMV_PTS_MINOR,
     );
     if($p > 0) {
 	ImVirt::inc_pts($dref, $p, IMV_VIRTUAL, PRODUCT);
